// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Substance list should render correctly 1`] = `
Array [
  <table
    className="table mb-0"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          #
        </th>
        <th
          scope="col"
        >
          Название
        </th>
        <th
          scope="col"
        >
          Количество
        </th>
        <th
          scope="col"
        >
          Лаборатория
        </th>
        <th
          scope="col"
        >
          Место
        </th>
        <th
          scope="col"
        >
          Фирма
        </th>
        <th
          scope="col"
        >
          CAS
        </th>
        <th
          scope="col"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          className="align-middle"
          scope="row"
        >
          1
        </th>
        <td
          className="align-middle"
        >
          some name
        </td>
        <td
          className="align-middle"
        >
          -
        </td>
        <td
          className="align-middle"
        >
          111
        </td>
        <td
          className="align-middle"
        >
          some place
        </td>
        <td
          className="align-middle"
        >
          -
        </td>
        <td
          className="align-middle"
        >
          -
        </td>
        <td
          className="d-flex flex-column justify-content-center align-items-center"
        >
          <button
            className="btn btn-primary mb-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-pen fa-w-16 "
              data-icon="pen"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M290.74 93.24l128.02 128.02-277.99 277.99-114.14 12.6C11.35 513.54-1.56 500.62.14 485.34l12.7-114.22 277.9-277.88zm207.2-19.06l-60.11-60.11c-18.75-18.75-49.16-18.75-67.91 0l-56.55 56.55 128.02 128.02 56.55-56.55c18.75-18.76 18.75-49.16 0-67.91z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </button>
          <button
            className="btn btn-danger"
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-trash fa-w-14 "
              data-icon="trash"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </button>
        </td>
      </tr>
      <tr>
        <th
          className="align-middle"
          scope="row"
        >
          1
        </th>
        <td
          className="align-middle"
        >
          some name
        </td>
        <td
          className="align-middle"
        >
          -
        </td>
        <td
          className="align-middle"
        >
          111
        </td>
        <td
          className="align-middle"
        >
          some place
        </td>
        <td
          className="align-middle"
        >
          -
        </td>
        <td
          className="align-middle"
        >
          -
        </td>
        <td
          className="d-flex flex-column justify-content-center align-items-center"
        >
          <button
            className="btn btn-primary mb-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-pen fa-w-16 "
              data-icon="pen"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M290.74 93.24l128.02 128.02-277.99 277.99-114.14 12.6C11.35 513.54-1.56 500.62.14 485.34l12.7-114.22 277.9-277.88zm207.2-19.06l-60.11-60.11c-18.75-18.75-49.16-18.75-67.91 0l-56.55 56.55 128.02 128.02 56.55-56.55c18.75-18.76 18.75-49.16 0-67.91z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </button>
          <button
            className="btn btn-danger"
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-trash fa-w-14 "
              data-icon="trash"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </button>
        </td>
      </tr>
      <tr>
        <th
          className="align-middle"
          scope="row"
        >
          1
        </th>
        <td
          className="align-middle"
        >
          some name
        </td>
        <td
          className="align-middle"
        >
          -
        </td>
        <td
          className="align-middle"
        >
          111
        </td>
        <td
          className="align-middle"
        >
          some place
        </td>
        <td
          className="align-middle"
        >
          -
        </td>
        <td
          className="align-middle"
        >
          -
        </td>
        <td
          className="d-flex flex-column justify-content-center align-items-center"
        >
          <button
            className="btn btn-primary mb-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-pen fa-w-16 "
              data-icon="pen"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M290.74 93.24l128.02 128.02-277.99 277.99-114.14 12.6C11.35 513.54-1.56 500.62.14 485.34l12.7-114.22 277.9-277.88zm207.2-19.06l-60.11-60.11c-18.75-18.75-49.16-18.75-67.91 0l-56.55 56.55 128.02 128.02 56.55-56.55c18.75-18.76 18.75-49.16 0-67.91z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </button>
          <button
            className="btn btn-danger"
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-trash fa-w-14 "
              data-icon="trash"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </button>
        </td>
      </tr>
    </tbody>
  </table>,
  <button
    className="btn btn-primary create-button"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-plus fa-w-14 "
      data-icon="plus"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
]
`;

exports[`Substance list should render empty list message 1`] = `
<div
  className="message-block"
>
  <h1>
    К сожалению, ничего не найдено.
  </h1>
  <img
    alt="Ничего не найдено"
    src="test-file-stub"
  />
</div>
`;

exports[`Substance list should render error message 1`] = `
<div
  className="message-block"
>
  <h1>
    К сожалению, не удалось подключиться к базе данных.
    <br />
    Обратитесь к Роману как можно быстрее!
  </h1>
  <img
    alt="Ошибка загрузки"
    src="test-file-stub"
  />
</div>
`;

exports[`Substance list should render request loading spinner 1`] = `
<div
  className="lds-ring mt-5 mx-auto d-block"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;
